# gtk-arch-spotlight

./: Cargo.toml  README.md
assets/: default-styles.css
src/: app_state.rs  constants.rs  flags.rs  main.rs  render.rs  utils.rs
src/components/: fill.rs  input_entry.rs  mod.rs  result_item.rs  result_list.rs  result_wrapper.rs  window_content.rs
src/model/: app_object.rs  desktop_entry.rs  mod.rs
src/modules/: config.rs  mod.rs  parser.rs  render.rs  search.rs
src/window/: imp.rs  mod.rs
